1.添加周完成任务功能

--- a/src/main/resources/templates/tasks/itemTasks.html
+++ b/src/main/resources/templates/tasks/itemTasks.html
@@ -35,7 +35,7 @@
                                 <tr>
                                     <th>任务名称</th>
                                     <th>责任人</th>
-                                    <th>时间</th>
+                                    <th>创建时间</th>
                                     <th>状态</th>
                                     <th>操作</th>
                                 </tr>
@@ -81,8 +81,8 @@
                                 <tr>
                                     <th>任务名称</th>
                                     <th>责任人</th>
-                                    <th>时间</th>
-                                    <th>状态</th>
+                                    <th>创建时间</th>
+                                    <th>完成时间</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -90,7 +90,7 @@
                                     <td th:text="${task.stName}"></td>
                                     <td th:text="${task.staff.stName}"></td>
                                     <td th:text="${#dates.format(task.dtCreatetime, 'yyyy-MM-dd')}"></td>
-                                    <td >已完成</td>
+                                    <td th:text="${#dates.format(task.dtFinishtime, 'yyyy-MM-dd')}"></td>
                                 </tr>
                                 <!-- more data -->
                                 </tbody>
