--- a/src/main/resources/templates/tasks/finishTasksOfWeek.html
+++ b/src/main/resources/templates/tasks/finishTasksOfWeek.html
@@ -1,3 +1,21 @@
+<style>
+    .am-popover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 0;
+        border-radius: 0;
+        background: #333;
+        color: #fff;
+        border: 1px solid #333;
+        display: none;
+        font-size: 1.6rem;
+        z-index: 9999;
+        opacity: 0;
+        -webkit-transition: opacity .3s;
+        transition: opacity .3s;
+    }
+</style>
 <div class="am-u-sm-12 am-u-md-12 am-u-lg-12 widget-margin-bottom-lg" >
     <div class="widget am-cf widget-body-lg">
         <div class="widget-body  am-fr">
@@ -15,7 +33,7 @@
                     </thead>
                     <tbody>
                     <tr class="gradeX" th:each="task:${finishTasks}">
-                        <td th:value="${task.stName}"  onclick="getTableNikeName(this)" th:text="${#strings.abbreviate(task.stName,8)}" ></td>
+                        <td th:value="${task.stName}" onmouseover="getNikeName(this)" th:text="${#strings.abbreviate(task.stName,8)}" ></td>
                         <td th:text="${task.staff.stName}"></td>
                         <td th:text="${task.item.stName}"></td>
                         <td th:text="${#dates.format(task.dtCreatetime, 'yyyy-MM-dd')}"></td>
