--- a/src/main/resources/templates/tasks/staffTasks.html
+++ b/src/main/resources/templates/tasks/staffTasks.html
@@ -107,6 +107,9 @@
 
         </div>
     </div>
+    <div class="amz-toolbar" id="amz-toolbar" hidden>
+        <a href="#top" title="回到顶部" class="am-icon-btn am-icon-arrow-up am-active" id="amz-go-top"></a>
+    </div>
 </div>
 <script>
     $(function () {
