--- a/src/main/resources/templates/tasks/staffTasks.html
+++ b/src/main/resources/templates/tasks/staffTasks.html
@@ -33,6 +33,11 @@
                             </span>
                         </div>
                     </div>
+                    <div>
+                        <div style="float: right">
+                            当前进行中的任务数 : [[${staff.taskNowNum}]]
+                        </div>
+                    </div>
                     <div class="widget-body  am-fr">
                         <div class="am-scrollable-horizontal " style="height: 330px;overflow-y: auto">
                             <table width="100%" class="am-table am-table-compact am-text-nowrap tpl-table-black example-r ">
@@ -76,6 +81,11 @@
                         <div style="float: left">
                             <span >已完成任务
                             </span>
+                        </div>
+                    </div>
+                    <div>
+                        <div style="float: right">
+                            已完成的任务数 : [[${staff.taskFinishNum}]]
                         </div>
                     </div>
                     <div class="widget-body  am-fr">
