--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -460,8 +460,7 @@
                         </div>
                         <div class="widget-body  am-fr">
                             <div class="am-scrollable-horizontal " style="height: 330px;overflow-y: auto">
-                                <table width="100%" class="am-table am-table-compact am-text-nowrap tpl-table-black example-r "
-                                >
+                                <table width="100%" class="am-table am-table-compact am-text-nowrap tpl-table-black example-r ">
                                     <thead>
                                     <tr>
                                         <th>任务名称</th>
