回车键登陆与搜索 time:11/23 11:15

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -500,6 +500,11 @@
 <script src="assets/js/app.js"></script>
 <script type="text/javascript">
     $(function() {
+        $(document).keydown(function(event){
+            if(event.keyCode==13){
+                $("#searchButton").click();
+            }
+        });
         getNikeName=function(ele){
             nikeName=$(ele).attr("value");
             $(ele).popover({
