--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,6 +73,11 @@
     <script src="assets/js/app.js"></script>
 <script>
     $(function () {
+        $(document).keydown(function(event){
+            if(event.keyCode==13){
+                $(".tpl-login-btn").click();
+            }
+        });
         $(".tpl-login-btn").click(function () {
             stUsername=$("#username").prop("value");
             stPassword=$("#password").prop("value");
